# FaceRecognition

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp
lib/: libarcsoft_face_engine.lib
src/: FileManager.hpp  config.h  main.cpp  utils.h
src/ArcFace/: ArcFace_R100.cpp  ArcFace_R100.h
src/RetinaFace/: RetinaFace_R50.cpp  RetinaFace_R50.h
src/TRTInfer/: TRTInfer.cpp  TRTInfer.h  TRTInfer.hpp
src/TRTInfer/AntiSpoofing/: AntiSpoofing.cpp  AntiSpoofing.h
src/TRTInfer/ArcFace/: ArcFace_R100.cpp  ArcFace_R100.h  prelu.h
src/TRTInfer/ArcSoft/: ArcSoft.cpp  ArcSoft.h  ArcSoftThread.h
src/TRTInfer/RetinaFace/: RetinaFace_R50.cpp  RetinaFace_R50.h  common.hpp
src/UI/: ErrorMsg.hpp  HandleThread.cpp  HandleThread.hpp  facedialog.cpp  facedialog.h  facedialog.ui  imagedialog.cpp  imagedialog.h  imagedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
